# QRab

./: .gitignore  CMakeLists.txt  README.md  create-dmg.sh  make-src.sh  qrab.qrc  qtquickcontrols2.conf
.github/workflows/: packaging.yml
icons/: info.plist.in
lang/: qrab_pl.qm  qrab_pl.ts  qrab_xx.ts
src/: main.cpp  qrabconfig.h  qrabconfig.h.in  tglobals.cpp  tglobals.h  tgrabqr.cpp  tgrabqr.h
src/qml/: AboutDialog.qml  AboutPage.qml  AdjustDialog.qml  GrabPage.qml  LinkText.qml  Main.qml  NavItem.qml  QRabSettings.qml  ReplaceList.qml  SettingsDialog.qml  SettingsPage.qml
